--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ textarea {
   border-left: 1px solid black;
   padding: 10px;
 }
+.currentDay {
+  text-align: center;
+}
+
+.currentTime {
+  text-align: center;
+}
 
 .jumbotron {
   text-align: center;
